fix item width overflow

--- a/assets/index.less
+++ b/assets/index.less
@@ -38,6 +38,9 @@
     height: 34px;
     line-height: 34px;
     color: #000;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    direction: rtl;
   }
 
   &-indicator {
